# -AMS2JSonReader

./: .gitignore  CMakeLists.txt
AMS2JSonReader/: AMS2JSonReader.cpp  AMS2JSonReader.h  CMakeLists.txt  config.json  jr_stats_data.json  json.hpp  json_reader_config.json
AMS2JSonReader/curl_x64-windows/: CONTROL
AMS2JSonReader/curl_x64-windows/share/curl/: vcpkg.spdx.json  vcpkg_abi_info.txt
